nui/radar.css
@font-face {
	font-family: "Seg-7";
	src: url( "fonts/Segment7Standard.otf" );
}

@font-face {
	font-family: "Heebo";
	src: url( "fonts/Heebo-Bold.ttf" );
}

@font-face {
	font-family: "Heebo-Regular";
	src: url( "fonts/Heebo-Regular.ttf" );
}

* {
	font-family: 'Heebo', Verdana, Geneva, Tahoma, sans-serif;
	font-size: 13px;
    box-sizing: border-box;
    user-select: none;
}

body {
	overflow: hidden;
}

/* Removes the outline when buttons have been clicked */
button:focus { outline: none; }

/* The alignment classes for the dynamic repositioning system */
#radarFrame.top_left { top: 10px; left: 10px; }
#radarFrame.top_middle { top: 10px; left: 0; right: 0; }
#radarFrame.top_right { top: 10px; right: 10px; }
#radarFrame.middle_right { top: 0; bottom: 0; right: 10px; }
#radarFrame.middle_left { top: 0; bottom: 0; left: 10px; }
#radarFrame.bottom_left { bottom: 10px; left: 10px; }
#radarFrame.bottom_middle { bottom: 10px; left: 0; right: 0; }
#radarFrame.bottom_right { bottom: 10px; right: 10px; }

#radarFrame {
	width: 715px;
	height: 230px;

	position: absolute;
    margin: auto;
    
    top: calc( ( 100% - 10px ) - 230px );
    left: calc( ( 100% - 10px ) - 715px );

	background-image: url( "images/frame.png" );

	/* Settings for scaling */
	transform: scale( 1.0 );
	transform-origin: 0 0;

	z-index: 1;
}

.frame_border {
	width: 685px;
	height: 210px;

	position: absolute;
	margin: auto;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;

	background-color: rgb( 20, 22, 18 );

	clip-path: polygon( 20px 2px, 665px 2px, 682px 30%, 682px 70%, 665px 208px, 20px 208px, 3px 70%, 3px 30% );
}

.radar_container {
	width: 675px;
	height: 200px;

	/* Temp centre */
	position: absolute;
	margin: auto;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;

	display: grid;
	grid-template-columns: 1fr 635px 1fr;
}

.panel_side {
	width: 100%;
	height: 100%;
	z-index: 5;
	box-shadow: inset 0px 20px 20px -15px rgba( 0, 0, 0, 0.4 );
}
	.panel_left {
		clip-path: polygon( 0 30%, 80% 0, 100% 0, 100% 100%, 80% 100%, 0 70% );
		transform: translateX( 1px ); 
		background-image: url( "images/bg_left.png" );
		background-repeat: no-repeat;
	}

	.panel_right {
		clip-path: polygon( 0 0, 20% 0, 100% 30%, 100% 70%, 20% 100%, 0 100% );   
		transform: translateX( -1px ); 
		background-image: url( "images/bg_right.png" );
		background-repeat: no-repeat;
	}

.arrow {
	width: 11px;
	height: 15.4px;
	min-width: 11px;
	min-height: 15.4px;
	margin: 8px auto;
	background-color: rgb( 0, 0, 0 );
	clip-path: polygon( 50% 0, 100% 55%, 65% 55%, 65% 100%, 35% 100%, 35% 55%, 0 55% );
}
	.arrow_down {
		transform: rotate( 180deg );
	}

.active {
	color: rgb( 242, 70, 24 );
	text-shadow: 0 0 6px rgba( 235, 62, 15, 0.5 );
}
	.active_arrow {
		background-color: rgb( 242, 70, 24 );
	}

#radar {
	background-image: url( "images/bg.png" );
	background-repeat: no-repeat;

	height: 100%;
	width: 100%;

	display: grid;
	grid-template-columns: 45px 50px 150px 35px 50px 135px 35px 135px;
	gap: 0 0;

	z-index: 10;

	box-shadow: inset 0px 20px 20px -15px rgba( 0, 0, 0, 0.4 );
}
	#radar .label {
		font-size: 15px;
		text-align: center; 
		width: 100%; 
		position: absolute;
		color: rgb( 255, 255, 255 );
	}
		#radar .label_top {
			top: 0;
			left: 0;
			padding-top: 3px;
		}

		#radar .label_bottom {
			bottom: 0;
			left: 0;
			padding-bottom: 3px;
		}

	#radar .pwr_button_container {
		display: flex;
		flex-direction: column;
	}
		#radar .pwr_button_container .pwr_button {
			width: 45px;
			height: 45px;
			margin: auto;
			background: linear-gradient( to bottom, rgba( 230, 230, 230, 0.8 ), rgb( 40, 168, 40 ) 10%, rgb( 0, 134, 0 ) );
			box-shadow: 0px 0px 3px 0px rgb( 80, 80, 80 );
			text-align: center;
			/* font-family: 'Heebo-Regular'; */
			font-size: 14px;
			color: rgb( 34, 34, 34 );
			line-height: 45px;
			border-radius: 10px;
		}
			#radar .pwr_button_container .pwr_button:hover {
				background: linear-gradient( to bottom, rgba( 240, 240, 240, 0.8 ), rgb( 50, 178, 50 ) 10%, rgb( 0, 144, 0 ) );
			}

			#radar .pwr_button_container .pwr_button:active {
				background: linear-gradient( to bottom, rgba( 220, 220, 220, 0.8 ), rgb( 30, 158, 30 ) 10%, rgb( 0, 124, 0 ) );
				box-shadow: inset 0px 0px 3px 0px rgb( 80, 80, 80 );
			}

	#radar .modes_container {
		display: grid;
		grid-template-rows: 1fr 1fr;
	}
		#radar .modes_container .modes {
			display: flex;
			flex-direction: column;

			padding: 10px 0;
		}
			#radar .modes_container .modes p {
				margin: auto;
			}
		
		#radar .modes_container .fast_top {
			margin-top: 15px;
			margin-bottom: 10px;
			padding-top: 10px;
			padding-bottom: 0;
		}

		#radar .modes_container .fast_bottom {
			margin-top: 10px;
			margin-bottom: 15px;
			padding-top: 0;
			padding-bottom: 10px;
		}
	
	#radar .speeds_container {
		width: 100%;
		display: flex;
		flex-direction: column;
	}
		#radar .speeds_container .display {
			display: grid;
			grid-template-columns: 1fr;

			height: 70px;

			border: 2px solid rgb( 0, 0, 0 );
			
			margin: auto 0;
			background-color: rgb( 61, 18, 0 );
		}   
			#radar .speeds_container .display p {
				grid-row-start: 1;
				grid-column-start: 1;

				font-size: 70px;
				text-align: center;

				line-height: 115%;

				margin: 0 auto;
				letter-spacing: 10px;

				margin-right: -9px;
			}
		
		#radar .speeds_container .fast {
			height: 60px;
			background-color: rgb( 50, 0, 0 );
		}
			#radar .speeds_container .fast p {
				font-size: 60px;
				line-height: 110%;
				margin-right: -8px;
			}

		#radar .speeds_container .fast_top {
			margin-top: 27px;
		}

		#radar .speeds_container .fast_bottom {
			margin-bottom: 27px;
		}

	#radar .speed_arrows_container {
		display: flex;
		flex-direction: column;
	}
		#radar .speed_arrows_container .speed_arrows {
			height: 70px; 
	
			display: flex; 
			flex-direction: column; 
			align-items: center;
			justify-content: center;
			
			margin: auto 0; 
		}

		#radar .speed_arrows_container .fast_top {
			margin-top: 22px;
		}
/* ... */

